started announce, fixed sizing on mobile for app badges, added ios permalinks

--- a/css/style.css
+++ b/css/style.css
@@ -52,8 +52,8 @@ a {
 }
 
 .paradeTitle {
-  width:450px;
-  height:139px;
+  width:430px;
+  height:133px;
 }
 
 .mainDescription {
@@ -61,11 +61,20 @@ a {
 }
 
 .appDownloadButtons {
-  width: 260px;
-  height: 43px;
+  /* display: flex; */
+  /* flex-direction: row; */
   padding-left: 45px;
   padding-bottom: 20px;
+  text-decoration: none;
 }
+
+.dlButton {
+  width:30%;
+  height:auto;
+  padding-right:0;
+  margin-right:0
+}
+
 
 .navBar {
   position: absolute;
@@ -87,8 +96,9 @@ a {
 }
 
 .icon {
-  width: 80px;
-  height: 80px;
+  width:250px;
+  height:250px;
+  padding-right:20px;
 }
 
 
@@ -98,6 +108,14 @@ a {
   /* text-align: center; */
   font-size: 23px;
 }
+
+.announcePanelBody {
+  padding-left: 45px;
+  padding-right: 40px;
+  /* text-align: center; */
+  font-size: 23px;
+}
+
 
 .firstPanelHeading {
   padding-left: 40px;
@@ -236,6 +254,11 @@ a {
       left: 25;
   }
 
+  .icon {
+    width:180px;
+    height:180px;
+  }
+
   .firstPanelHeading {
     padding-left: 15px;
   }
@@ -249,11 +272,22 @@ a {
   }
 
   .appDownloadButtons {
-    width: 290px;
-    height: 48px;
-    padding: 0;
-    padding-left: 20px;
+    /* display: flex; */
+    /* flex-direction: column; */
+    padding-left: 0px;
     padding-bottom: 20px;
+    text-decoration: none;
+    display:block;
+    align-items: center;
+    text-align:center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .dlButton {
+    width:50%;
+    padding-bottom: 10px;
+
   }
 
   .firstPanelBody {
@@ -265,6 +299,10 @@ a {
     text-align: center;
     padding-left: 20px;
     padding-right: 20px;
+  }
+
+  .mainDescription {
+    font-size: 16px;
   }
 
   .bio {
@@ -303,6 +341,8 @@ a {
        width: 80%;
       padding-top: 5px;
       padding-left:0px;
+      /* HIDE? */
+      display: none;
 
   }
 
